fix: iframe and buttons overflow on mobile

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -22,6 +22,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .features {
@@ -34,6 +35,11 @@
 .featureImage {
   height: 200px;
   width: 200px;
+}
+
+.youtubeVideo {
+  width: 560px;
+  height: 315px;
 }
 
 /* Announcement banner */
@@ -63,6 +69,11 @@ div[class^="announcementBarContent"] a:hover {
   .announcement {
     font-size: 18px;
   }
+
+  .youtubeVideo {
+    width: calc(560px / 1.5);
+    height: calc(315px / 1.5);
+  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -70,5 +81,21 @@ div[class^="announcementBarContent"] a:hover {
     font-size: 15px;
     line-height: 22px;
     padding: 6px 30px;
+  }
+}
+
+/* (e.g. iPhone 5) */
+@media only screen and (max-width: 400px) {
+  .youtubeVideo {
+    width: calc(560px / 1.8);
+    height: calc(315px / 1.8);
+  }
+}
+
+/* (e.g. Galaxy Fold) */
+@media only screen and (max-width: 300px) {
+  .youtubeVideo {
+    width: calc(560px / 2.2);
+    height: calc(315px / 2.2);
   }
 }
